--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.13.1",
+    "qrcode-terminal": "^0.12.0",
     "sequelize": "^6.37.5",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "whatsapp-web.js": "^1.26.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
