--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
+    "puppeteer": "^24.1.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "sequelize": "^6.37.5",
