--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "qrcode-terminal": "^0.12.0",
     "sequelize": "^6.37.5",
     "uuid": "^11.0.5",
-    "whatsapp-web.js": "^1.26.0"
+    "whatsapp-web.js": "^1.26.0",
+    "puppeteer:install": "node node_modules/puppeteer/install.js"
+
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
