--- a/package.json
+++ b/package.json
@@ -18,18 +18,17 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.13.1",
+    "puppeteer-core": "^24.1.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "sequelize": "^6.37.5",
     "uuid": "^11.0.5",
-    "whatsapp-web.js": "^1.26.0",
-    "puppeteer:install": "node node_modules/puppeteer/install.js"
-
+    "whatsapp-web.js": "^1.26.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
   },
   "engines": {
-    "node": ">=18.0.0" 
+    "node": ">=18.0.0"
   }
 }
