--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "qrcode-terminal": "^0.12.0",
     "sequelize": "^6.37.5",
     "uuid": "^11.0.5",
-    "whatsapp-web.js": "^1.26.0"
+    "whatsapp-web.js": "^1.26.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
