--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "pg": "^8.13.1",
+    "pg": "^8.13.3",
+    "pg-hstore": "^2.3.4",
     "puppeteer-core": "^24.1.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
